[gd_scene load_steps=2 format=2]

[ext_resource path="res://editor/scenes/LineTest.gd" type="Script" id=1]

[node name="LineTest" type="Node2D"]
script = ExtResource( 1 )

[node name="SampleLine" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 1.5874 )
points = PoolVector2Array( 114.492, 126.939, 1230.44, 709.515 )
width = 4.0
default_color = Color( 1, 1, 1, 0.392157 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CurvedLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 263.708, 115.828, 466.895, 87.2543, 592.3, 147.576, 789.138, 244.407, 927.242, 368.224, 922.479, 425.371, 860.571, 557.125, 800.25, 728.564, 370.064, 684.117, 173.226, 522.202, 539.916, 553.95, 452.609, 369.812 )
width = 4.0
default_color = Color( 0.321569, 0.176471, 0.211765, 0.380392 )

[node name="RoadLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 314.336, 636.007, 690.517, 645.907, 1022.86, 454.988, 1042.66, 292.353, 834.767, 194.773, 710.316, 251.341, 807.896, 344.679, 626.877, 447.917, 441.615, 303.667, 168.672, 132.547 )
width = 4.0
default_color = Color( 0.72549, 0.407843, 0.129412, 1 )

[node name="DottedLine" type="Node2D" parent="."]

[node name="CurveTest" type="Node2D" parent="."]

[node name="RoadTest" type="Node2D" parent="."]
